--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Dmitry Persiyanov GSoC 2018 Blog
 email: persiyanov@phystech.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    Dmitry Persiyanov Blog about GSoC 2018 participation. Project "Multistream API" in Gensim.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
